sort.pancake.lessons.sort.pancake.BubblePancake.scala.error
BubblePancake:3: error: int is already defined as value int
def inverser(int:a,int:b){
                   ^BubblePancake:3: error: not found: type a
def inverser(int:a,int:b){
                 ^BubblePancake:3: error: not found: type b
def inverser(int:a,int:b){
                       ^BubblePancake:4: error: not found: value a
  retourne(a+1);
           ^BubblePancake:5: error: not found: value b
  retourne(b+1);
           ^BubblePancake:6: error: not found: value a
  retourne(a+1);
           ^BubblePancake:17: error: not found: value j
    for(i<- 0 to getTaillePile()-1-j){
                                   ^